Fixed image paths only broken on github pages

--- a/styles/grid.css
+++ b/styles/grid.css
@@ -16,8 +16,8 @@
 }
 /* Pieces */
 .x {
-  content: url("/assets/x.png");
+  content: url("../assets/x.png");
 }
 .o {
-  content: url("/assets/o.png");
+  content: url("../assets/o.png");
 }
